--- a/VirtualWorkoutV2/app/src/main/res/layout/activity_choose_workout.xml
+++ b/VirtualWorkoutV2/app/src/main/res/layout/activity_choose_workout.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LobbyActivity">
+    tools:context=".ChooseWorkoutActivity">
 
     <TextView
         android:id="@+id/create_lobby_title"
@@ -56,7 +56,7 @@
     </androidx.gridlayout.widget.GridLayout>
 
     <LinearLayout
-        android:id="@+id/cardio_layout"
+        android:id="@+id/level_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
@@ -64,127 +64,34 @@
         android:visibility="gone">
 
         <Button
-            android:id="@+id/cardio_button1"
+            android:id="@+id/button1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/cardio_button_1" />
+            android:text="@string/button_1"
+            android:onClick="onWorkoutClick"/>
 
         <Button
-            android:id="@+id/cardio_button2"
+            android:id="@+id/button2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/cardio_button_2" />
+            android:text="@string/button_2"
+            android:onClick="onWorkoutClick"/>
 
         <Button
-            android:id="@+id/cardio_button3"
+            android:id="@+id/button3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/cardio_button_3" />
+            android:text="@string/button_3"
+            android:onClick="onWorkoutClick"/>
 
         <Button
-            android:id="@+id/cardio_button4"
+            android:id="@+id/button4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/cardio_button_4" />
+            android:text="@string/button_4"
+            android:onClick="onWorkoutClick"/>
     </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/strength_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:orientation="vertical"
-        android:visibility="gone">
 
-        <Button
-            android:id="@+id/strength_button1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/strength_button_1" />
-
-        <Button
-            android:id="@+id/strength_button2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/strength_button_2" />
-
-        <Button
-            android:id="@+id/strength_button3"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/strength_button_3" />
-
-        <Button
-            android:id="@+id/strength_button4"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/strength_button_4" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/blitz_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:orientation="vertical"
-        android:visibility="gone">
-
-        <Button
-            android:id="@+id/blitz_button1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/blitz_button_1" />
-
-        <Button
-            android:id="@+id/blitz_button2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/blitz_button_2" />
-
-        <Button
-            android:id="@+id/blitz_button3"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/blitz_button_3" />
-
-        <Button
-            android:id="@+id/blitz_button4"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/blitz_button_4" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/fat_burn_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:orientation="vertical"
-        android:visibility="gone">
-
-        <Button
-            android:id="@+id/fat_burn_button1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/fat_burn_button_1" />
-
-        <Button
-            android:id="@+id/fat_burn_button2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/fat_burn_button_2" />
-
-        <Button
-            android:id="@+id/fat_burn_button3"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/fat_burn_button_3" />
-
-        <Button
-            android:id="@+id/fat_burn_button4"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/fat_burn_button_4" />
-    </LinearLayout>
 
 </RelativeLayout>
