--- a/VirtualWorkoutV2/app/src/main/res/layout/activity_inbetween_workouts.xml
+++ b/VirtualWorkoutV2/app/src/main/res/layout/activity_inbetween_workouts.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="32dp"
+        android:textSize="40dp"
         android:text="00:00" />
 
     <com.p2aau.virtualworkoutv2.openvcall.ui.layout.GridVideoViewContainer
@@ -36,6 +37,35 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="96dp"
+        android:textSize="20sp"
+        android:gravity="center"
         android:text="@string/congrats" />
+
+    <ImageView
+        android:id="@+id/progressbar1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/textView4"
+        android:layout_centerHorizontal="true"
+        android:paddingTop="15dp"
+        app:srcCompat="@drawable/progressbar1" />
+
+    <ImageView
+        android:id="@+id/progressbar2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/textView4"
+        android:layout_centerHorizontal="true"
+        android:paddingTop="15dp"
+        app:srcCompat="@drawable/progressbar2" />
+
+    <ImageView
+        android:id="@+id/progressbar3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/textView4"
+        android:layout_centerHorizontal="true"
+        android:paddingTop="15dp"
+        app:srcCompat="@drawable/progressbar3" />
 
 </RelativeLayout>
