--- a/VirtualWorkoutV2/app/src/main/res/layout/activity_main_menu.xml
+++ b/VirtualWorkoutV2/app/src/main/res/layout/activity_main_menu.xml
@@ -16,34 +16,11 @@
         android:orientation="vertical"
         android:padding="16dp">
 
-        <LinearLayout
-            android:id="@+id/friend_activity_list"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerViewMain"
             android:layout_width="match_parent"
-            android:layout_height="583dp"
-            android:layout_weight="1"
-            android:orientation="vertical">
-
-            <LinearLayout
-                android:id="@+id/friend_activity"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:id="@+id/imageView2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    app:srcCompat="@drawable/smiley_icon" />
-
-                <TextView
-                    android:id="@+id/textView2"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="2"
-                    android:text="TextView" />
-            </LinearLayout>
-        </LinearLayout>
+            android:layout_height="match_parent"
+            android:layout_weight="1" />
 
         <Button
             android:id="@+id/create_lobby_button"
