--- a/VirtualWorkoutV2/app/src/main/res/layout/activity_lobby.xml
+++ b/VirtualWorkoutV2/app/src/main/res/layout/activity_lobby.xml
@@ -23,6 +23,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.638"
         app:srcCompat="@drawable/add_friend_to_party" />
 
     <Button
@@ -44,7 +45,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/button3"
-        app:layout_constraintHeight_percent="0.25"/>
+        app:layout_constraintHeight_percent="0.35"/>
 
     <ViewStub
         android:id="@id/small_video_view_dock"
