--- a/VirtualWorkoutV2/app/src/main/res/layout/activity_choose_workout.xml
+++ b/VirtualWorkoutV2/app/src/main/res/layout/activity_choose_workout.xml
@@ -23,7 +23,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="20dp"
-        android:visibility="gone"
+        android:visibility="visible"
         app:columnCount="2"
         app:rowCount="2"
         app:useDefaultMargins="true">
@@ -61,7 +61,7 @@
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:orientation="vertical"
-        android:visibility="visible">
+        android:visibility="gone">
 
         <Button
             android:id="@+id/button1"
