--- a/VirtualWorkoutV2/app/src/main/res/layout/activity_login.xml
+++ b/VirtualWorkoutV2/app/src/main/res/layout/activity_login.xml
@@ -46,7 +46,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_launcher_background" />
+        app:srcCompat="@drawable/logo_trans" />
 
     <Button
         android:id="@+id/goto_signup_button"
