--- a/VirtualWorkoutV2/app/src/main/res/layout/activity_inbetween_workouts.xml
+++ b/VirtualWorkoutV2/app/src/main/res/layout/activity_inbetween_workouts.xml
@@ -41,33 +41,6 @@
         android:gravity="center"
         android:text="@string/congrats" />
 
-    <ImageView
-        android:id="@+id/progressbar1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/next_up"
-        android:layout_centerHorizontal="true"
-        android:paddingTop="40dp"
-        app:srcCompat="@drawable/progressbar1" />
-
-    <ImageView
-        android:id="@+id/progressbar2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/next_up"
-        android:layout_centerHorizontal="true"
-        android:paddingTop="40dp"
-        app:srcCompat="@drawable/progressbar2" />
-
-    <ImageView
-        android:id="@+id/progressbar3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/next_up"
-        android:layout_centerHorizontal="true"
-        android:paddingTop="40dp"
-        app:srcCompat="@drawable/progressbar3" />
-
     <TextView
         android:id="@+id/next_up"
         android:layout_width="wrap_content"
@@ -87,5 +60,15 @@
         android:gravity="center"
         android:text="sheesh"
         android:textSize="20sp" />
+
+    <TextView
+        android:id="@+id/progressText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/next_exercise"
+        android:layout_centerHorizontal="true"
+        android:gravity="center"
+        android:text="poop"
+        android:textSize="24sp" />
 
 </RelativeLayout>
