--- a/VirtualWorkoutV2/app/src/main/res/layout/activity_end_screen.xml
+++ b/VirtualWorkoutV2/app/src/main/res/layout/activity_end_screen.xml
@@ -39,6 +39,75 @@
             android:text="@string/EndScreenNext"
             android:onClick="onNextClick"/>
 
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="300dp">
+         <ImageView
+             android:id="@+id/Emojibar"
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+            android:paddingHorizontal="12dp"
+             android:visibility="invisible"
+             app:srcCompat="@drawable/EmojiBarinvert"></ImageView>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/Heart"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:scaleX=".5"
+                    android:scaleY=".5"
+                    android:visibility="invisible"
+                    app:srcCompat="@drawable/Heart" />
+
+                <ImageView
+                    android:id="@+id/Laugh"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:scaleX=".5"
+                    android:scaleY=".5"
+                    android:visibility="invisible"
+                    app:srcCompat="@drawable/Laugh" />
+
+                <ImageView
+                    android:id="@+id/StarEyes"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:scaleX=".5"
+                    android:scaleY=".5"
+                    android:visibility="invisible"
+                    app:srcCompat="@drawable/StarEyes" />
+
+                <ImageView
+                    android:id="@+id/ThumpsUp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:scaleX=".5"
+                    android:scaleY=".5"
+                    android:visibility="invisible"
+                    app:srcCompat="@drawable/ThumpsUp" />
+
+                <ImageView
+                    android:id="@+id/Cry"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:scaleX=".5"
+                    android:scaleY=".5"
+                    android:visibility="invisible"
+                    app:srcCompat="@drawable/Cry" />
+            </LinearLayout>
+        </FrameLayout>
+
         <com.p2aau.virtualworkoutv2.openvcall.ui.layout.GridVideoViewContainer
             android:id="@+id/grid_video_view_container_own"
             android:layout_width="match_parent"
